Added Gamemode Creative
Added gamemode creative command, removed messages file(for now), added permissions file for storing perms

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,7 +8,10 @@ description: Core plugin for ThePrizRealm
 website: https://theprizrealm.net
 commands:
   fly:
-    description: Enable Fly
+    description: Toggle Fly
+    usage: /<command>
+  gmc:
+    description: Toggle gamemode creative
     usage: /<command>
 
 
