--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,3 +8,9 @@ no-permission: '&cYou do not have permission to execute this command!'
 # Option for changing Fly toggle messages
 fly-true: '&eFly has been set to &aTrue'
 fly-false: '&eFly has been set to &cFalse'
+
+# Option for changing Gamemode messages
+gamemode-creative: '&eGamemode has been set to &aCreative'
+gamemode-survival: '&eGamemode has been set to &aSurvival'
+gamemode-adventure: '&eGamemode has been set to &aAdventure'
+gamemode-spectator: '&eGamemode has been set to &aSpectator'
