Added gamemode survival

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -14,3 +14,4 @@ fly-false: '&eFly has been set to &cFalse'
 
 # Option for changing Gamemode messages
 gamemode-creative: '&eGamemode has been set to &aCreative'
+gamemode-survival: '&eGamemode has been set to &aSurvival'
