--- a/src/main/resources/permissions.yml
+++ b/src/main/resources/permissions.yml
@@ -3,4 +3,9 @@
 /fly - core.command.fly
 /fly (player) - core.command.fly.others
 /gmc - core.command.gamemode.creative
+/gms - core.command.gamemode.survival
+/gmsp - core.command.gamemode.spectator
+/gma - core.command.gamemode.adventure
 /gmc, /gms, /gmsp, /gma (player) - core.command.gamemode.others
+/msg (player) (message) - core.command.message
+/r (message) - core.command.reply
