--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -27,5 +27,8 @@ commands:
   website:
     description: Display website link
     aliases: [web]
+  broadcast:
+    description: Send an announcement to everyone
+    aliases: [announce, alert]
 
 
