--- a/src/main/resources/permissions.yml
+++ b/src/main/resources/permissions.yml
@@ -17,3 +17,7 @@
 /heal - core.command.heal
 /feed - core.command.feed
 /feed (player) - core.command.feed.others
+/smite (player) - core.command.smite
+/burn (player) - core.command.burn
+/clearinventory (/ci, /clearinv, /clear) - core.command.clearinv
+/clearinventory[/ci, /clearinv, /clear] (player) - core.command.clearinv.others
