--- a/src/main/resources/permissions.yml
+++ b/src/main/resources/permissions.yml
@@ -21,3 +21,4 @@
 /burn (player) - core.command.burn
 /clearinventory (/ci, /clearinv, /clear) - core.command.clearinv
 /clearinventory[/ci, /clearinv, /clear] (player) - core.command.clearinv.others
+/tp (player) - core.command.tp
