--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -58,6 +58,8 @@ commands:
     description: Teleport players to you
   tpall:
     description: Teleport every player to your location
+  god:
+    description: Become invincible or turn someone else invincible
 
 
 
